# dsniff

./: .gitignore  Makefile.in  README  README.md  arpspoof.8  arpspoof.c  asn1.c  buf.c  buf.h  common.h  configure  configure.ac  crc32.c  crc32.h  decode.c  decode.h  decode_ftp.c  decode_http.c  decode_imap.c  decode_pop.c  decode_pptp.c  decode_smb.c  decode_smtp.c  decode_sni.c  decode_ssh.c  decode_tds.c  dnsspoof.c  dsniff.8  dsniff.c  dsniff.magic  dsniff.services  dsniff_magic.h  dsniff_services.h  env2argv.c  env2argv.h  filesnarf.c  macof.c  magic.c  mailsnarf.c  mount.c  (+23 more)
.github/workflows/: static-release-push.yml
debian/: README.Debian  changelog  control  copyright  rules  watch
missing/: strlcat.h  strlcpy.h
